fixed layer overlap issue

--- a/src/plugins/imagery/components/imagery-view.scss
+++ b/src/plugins/imagery/components/imagery-view.scss
@@ -282,7 +282,7 @@
         flex-direction: row;
         position: absolute;
         left: $interiorMargin; top: $interiorMargin;
-        z-index: 2;
+        z-index: 3;
         background: $colorLocalControlOvrBg;
         border-radius: $basicCr;
         align-items: center;
